--- a/src/http/views/set.hbs
+++ b/src/http/views/set.hbs
@@ -5,6 +5,17 @@
             <i class="ss ss-{{set.keyruneCode}} ss-2x"></i>
             <span>{{set.name}}</span>
         </h3>
+        <ul class="mt-4 space-y-2">
+            <li class="text-gray-700">Block: {{set.block}}</li>
+            <li class="text-gray-700">Code: {{toUpperCase set.code}}</li>
+            <li class="text-gray-700">Release Date: {{set.releaseDate}}</li>
+            <li class="text-gray-700">Set Price: {{set.prices.basePriceNormal}}</li>
+            {{#if authenticated}}
+            <li class="text-gray-700">Total Owned: {{set.ownedTotal}}/{{set.baseSize}}</li>
+            <li class="text-gray-700">Owned Value: {{set.ownedValue}}</li>
+            <li class="text-gray-700">{{>completionRate set}}</li>
+            {{/if}}
+        </ul>
         {{! Popover - positioned relative to #set-header-container }}
         <div id="price-info-popover" class="absolute hidden left-4 right-4 top-full mt-2 z-50" role="dialog"
             aria-modal="false" aria-labelledby="popover-title">
@@ -156,19 +167,9 @@
                     d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1M21 12a9 9 0 11-18 0 9 9 0 0118 0z">
                 </path>
             </svg>
-            <span class="font-semibold">View Set Prices</span>
+            <span class="font-semibold">More Price Info</span>
         </button>
-        <ul class="mt-4 space-y-2">
-            <li class="text-gray-700">Block: {{set.block}}</li>
-            <li class="text-gray-700">Code: {{toUpperCase set.code}}</li>
-            <li class="text-gray-700">Release Date: {{set.releaseDate}}</li>
-            <li class="text-gray-700">Set Price: {{set.prices.basePriceNormal}}</li>
-            {{#if authenticated}}
-            <li class="text-gray-700">Total Owned: {{set.ownedTotal}}/{{set.baseSize}}</li>
-            <li class="text-gray-700">Owned Value: {{set.ownedValue}}</li>
-            <li class="text-gray-700">{{>completionRate set}}</li>
-            {{/if}}
-        </ul>
+
     </section>
 
 
