fix hidden btn bug

--- a/src/http/public/css/tailwind.css
+++ b/src/http/public/css/tailwind.css
@@ -5050,6 +5050,10 @@ select {
 }
 
 @media (min-width: 1024px) {
+  .lg\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
   .lg\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
