base, all toggle

--- a/src/http/public/css/tailwind.css
+++ b/src/http/public/css/tailwind.css
@@ -2041,6 +2041,10 @@ select {
   max-width: 80rem;
 }
 
+.flex-1 {
+  flex: 1 1 0%;
+}
+
 .flex-shrink {
   flex-shrink: 1;
 }
@@ -2131,6 +2135,10 @@ select {
 
 .text-ellipsis {
   text-overflow: ellipsis;
+}
+
+.whitespace-nowrap {
+  white-space: nowrap;
 }
 
 .rounded {
