fix show bonus set price

--- a/src/http/views/partials/setList.hbs
+++ b/src/http/views/partials/setList.hbs
@@ -16,7 +16,7 @@
                     <i class="ss ss-{{this.keyruneCode}} ss-fw"></i>
                     <a href="{{this.url}}" class="table-link">{{this.name}}</a>
                 </td>
-                <td class="py-2">{{this.prices.basePriceNormal}}</td>
+                <td class="py-2">{{this.prices.defaultPrice}}</td>
                 {{#if ../authenticated}}
                 <td class="py-2">{{>completionRate}}</td>
                 {{/if}}
