card tags, bonus card tag

--- a/src/http/views/set.hbs
+++ b/src/http/views/set.hbs
@@ -211,7 +211,7 @@
                 <td class="py-2">{{this.number}}</td>
                 <td class="card-name-link py-2" data-id="{{this.cardId}}" data-img-src="{{this.imgSrc}}">
                     <a href="{{this.url}}">{{this.name}}</a>
-                    {{>reserved card=this}}
+                    {{>cardTags card=this}}
                     <a href="{{this.url}}" class="card-img-link">
                         <img src="{{this.imgSrc}}" alt="{{this.name}}" class="card-img-preview" />
                     </a>
